@@ -101,6 +101,9 @@ and important fixes to let ECL work better with Slime.
  - The UFFI interface now supports C99 types, such as :int8-t, :uint32-t, etc,
    but only when the corresponding types do exist in the underlying C environment.
 
+ - SOCKET-MAKE-STREAM defaults :BUFFERING to :FULL and allows three new keyword
+   arguments, :INPUT, :OUTPUT and :EXTERNAL-FORMAT, as in SBCL.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
